--- a/src/app/feedback/feedback/feedback.component.html
+++ b/src/app/feedback/feedback/feedback.component.html
@@ -13,36 +13,76 @@
 <ion-content fullscreen="true" padding class="background">
   <div class="row">
     <div class="col">
-      <ion-item class="text-center">
-        <ion-label position="fixed">Select Service Engg</ion-label>
-        <ion-select interface="popover" placeholder="Select Engg"> </ion-select>
-      </ion-item>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <ion-item class="text-center">
-        <ion-label position="fixed">Rating</ion-label>
-        <ion-select interface="popover" placeholder="Select Technician Time">
+      <ion-item>
+        <ion-label position="fixed">Select </ion-label>
+        <ion-select
+          interface="popover"
+          [(ngModel)]="feedback.feedback_user_id"
+          placeholder="Select 
+        "
+        >
+          <ion-select-option
+            *ngFor="let item of serviceEngineer"
+            value="{{ item.user_id }}"
+            >{{ item.name }}</ion-select-option
+          >
         </ion-select>
       </ion-item>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <ion-item class="text-center">
-        <ion-label position="fixed">Feedback</ion-label>
-      </ion-item>
       <ion-item>
-        <ion-textarea placeholder="Enter feedback here..."></ion-textarea>
+        <ion-label position="fixed">Rating</ion-label>
+        <ion-select
+          [(ngModel)]="feedback.rating"
+          interface="popover"
+          placeholder="Select Rating"
+        >
+          <ion-select-option value="1">1</ion-select-option>
+          <ion-select-option value="2">2</ion-select-option>
+          <ion-select-option value="3">3</ion-select-option>
+          <ion-select-option value="4">4</ion-select-option>
+          <ion-select-option value="5">5</ion-select-option>
+        </ion-select>
+        <!-- <ionic-rating-component
+          #rating
+          activeIcon="ios-star"
+          defaultIcon="ios-star-outline"
+          activeColor="#ff0000"
+          defaultColor="#aaaaaa"
+          readonly="false"
+          rating="2"
+          fontSize="32px"
+          (ratingChanged)="onRatingChange($event)"
+        >
+        </ionic-rating-component> -->
+      </ion-item>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <ion-item>
+        <ion-label position="fixed">Feedback</ion-label>
+
+        <ion-textarea
+          [(ngModel)]="feedback.review_text"
+          placeholder="Enter feedback here..."
+        ></ion-textarea>
       </ion-item>
     </div>
   </div>
   <ion-row>
     <ion-col>
       <div class="ion-text-center">
-        <ion-button size="default" color="primary"> Submit</ion-button>
-        <ion-button size="default" color="danger" class="ion-margin-horizontal"
+        <ion-button size="default" (click)="onClickOfSubmit()" color="primary">
+          Submit</ion-button
+        >
+        <ion-button
+          size="default"
+          (click)="onClickOfCancel()"
+          color="danger"
+          class="ion-margin-horizontal"
           >Cancel</ion-button
         >
       </div>
