--- a/src/app/shop/shop.page.html
+++ b/src/app/shop/shop.page.html
@@ -1,9 +1,24 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>shop</ion-title>
+<ion-header [translucent]="true" primary>
+  <ion-toolbar color="primary" class="background">
+    <ion-buttons slot="start">
+      <ion-menu-button color="light"></ion-menu-button>
+    </ion-buttons>
+    <ion-row>
+      <ion-col class="col-9">
+        <div class="ion-text mt-3"><h5>Shop</h5></div>
+      </ion-col>
+      <ion-col>
+        <div class="ion-text-end mt-1">
+          <ion-buttons slot="end">
+            <ion-icon
+              class="mt-2"
+              style="zoom: 1.7"
+              name="cloud-download"
+            ></ion-icon>
+          </ion-buttons>
+        </div>
+      </ion-col>
+    </ion-row>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
